--- a/app/src/main/res/layout/fragment_tab_contact.xml
+++ b/app/src/main/res/layout/fragment_tab_contact.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/contact_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -47,6 +48,13 @@
 
     </LinearLayout>
 
+    <include android:id="@+id/progress"
+             layout="@layout/loading"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_centerInParent="true"
+             android:visibility="gone"
+    />
 
     <include
         layout="@layout/tab_navigation"
