--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/friend_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,16 +12,17 @@
 
     <ImageView
         android:id="@+id/friend_avatar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/friend_avatar_width"
+        android:layout_height="@dimen/friend_avatar_height"
     />
 
     <TextView
         android:id="@+id/friend_name"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/weight_dimen"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="@dimen/friend_margin_horizontal"
+        android:layout_marginRight="@dimen/friend_margin_horizontal"
         android:layout_weight="1"/>
 
     <CheckBox
@@ -28,7 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="4dp"
+        android:layout_marginLeft="@dimen/friend_margin_horizontal"
+        android:layout_marginRight="@dimen/friend_margin_horizontal"
         android:button="@drawable/circle_online"
         android:clickable="false"
     />
