--- a/app/src/main/res/menu/menu_persons.xml
+++ b/app/src/main/res/menu/menu_persons.xml
@@ -2,9 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/search"
+    <item android:id="@+id/persons_search"
           android:icon="@drawable/ic_search_menu_24dp"
           android:title="@string/friend_search_item"
           app:actionViewClass="android.support.v7.widget.SearchView"
           app:showAsAction="ifRoom|collapseActionView"/>
+
+    <item android:id="@+id/persons_back"
+          android:title="Back"
+          app:showAsAction="never"/>
 </menu>
