--- a/app/src/main/res/layout/activity_groups.xml
+++ b/app/src/main/res/layout/activity_groups.xml
@@ -8,6 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="by.grodno.toni7777.socialnetwork.ui.friends.FriendsActivity">
+    tools:context="by.grodno.toni7777.socialnetwork.ui.search.persons.GroupsActivity">
 
 </RelativeLayout>
