--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -12,13 +12,15 @@
 
     <ImageView
         android:id="@+id/group_image"
-        android:layout_width="@dimen/friend_avatar_width"
-        android:layout_height="@dimen/friend_avatar_height"
+        android:layout_width="@dimen/group_image_width"
+        android:layout_height="@dimen/group_image_height"
     />
 
     <LinearLayout
         android:layout_width="@dimen/weight_dimen"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
