--- a/app/src/main/res/layout/fragment_groups_search.xml
+++ b/app/src/main/res/layout/fragment_groups_search.xml
@@ -3,7 +3,8 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <include layout="@layout/loading"/>
+    <include layout="@layout/loading"
+             android:visibility="gone"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/contentView"
@@ -18,7 +19,8 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <include layout="@layout/error"/>
+    <include layout="@layout/error"
+             android:visibility="gone"/>
 
     <include
         android:id="@+id/progress_pagination_view"
