--- a/app/src/main/res/layout/fragment_post_new.xml
+++ b/app/src/main/res/layout/fragment_post_new.xml
@@ -42,6 +42,7 @@
             android:src="@drawable/ic_add_photo_post_24dp"/>
 
         <ImageView
+            android:id="@+id/open_gallery"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
