--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
 
     <color name="newPostBottomColor">#dfdee6</color>
     <color name="toolbar_title">#ffffff</color>
+    <color name="message">#aaede7e7</color>
 
 </resources>
