Update Dialogs to MVP

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -63,7 +63,7 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:maxLength="1"
+                android:singleLine="true"
                 android:hint="Input text"
                 android:padding="4dp"/>
 
