--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -57,23 +57,23 @@
 
             <EditText
                 android:id="@+id/input_message"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:paddingRight="8dp"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:singleLine="true"
                 android:hint="Input text"
-                android:padding="4dp"/>
+                android:padding="4dp"
+                android:paddingRight="8dp"
+                android:singleLine="true"/>
 
             <ImageView
                 android:id="@+id/send_message"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:padding="4dp"
                 android:paddingRight="4dp"
-                android:src="@drawable/send_message"
+                android:src="@drawable/ic_send_message_24dp"
                 android:text="Send"/>
         </LinearLayout>
 
