--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/message_layout"
+<LinearLayout android:id="@+id/dialog_layout"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
@@ -27,9 +27,18 @@
             android:id="@+id/interlocutor_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/friend_margin_horizontal"
             android:layout_marginRight="@dimen/friend_margin_horizontal"
+        />
+
+        <TextView
+            android:id="@+id/last_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginLeft="@dimen/friend_margin_horizontal"
+            android:layout_marginRight="@dimen/friend_margin_horizontal"
+            android:layout_marginTop="4dp"
         />
 
     </LinearLayout>
