--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -9,44 +9,82 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/friend_name"
+        <LinearLayout
+            android:id="@+id/friend_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|center_vertical"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:text="Friend"
-            android:textSize="20dp"/>
+            android:layout_alignParentLeft="true"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp">
 
-        <TextView
-            android:id="@+id/my_name"
+            <ImageView
+                android:id="@+id/friend_avatar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@mipmap/ic_launcher"/>
+
+            <TextView
+                android:id="@+id/friend_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:singleLine="true"
+                android:text="Friend MyFriend"
+                android:textSize="20dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:text="My"
-            android:textSize="20dp"/>
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp">
+
+            <TextView
+                android:id="@+id/my_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:singleLine="true"
+                android:text="Anton Paliakov"
+                android:textSize="20dp"/>
+
+            <ImageView
+                android:id="@+id/my_avatar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/ic_launcher"/>
+
+        </LinearLayout>
 
         <ListView
             android:id="@+id/messages_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/sent_layoutt"
+            android:layout_above="@+id/sent_layout"
             android:layout_alignParentLeft="false"
             android:layout_alignParentTop="false"
-            android:layout_below="@+id/my_name"
+            android:layout_below="@+id/friend_layout"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="10dp"
             android:divider="@null"
             android:listSelector="@android:color/transparent"
             android:paddingLeft="4dp"
             android:paddingRight="4dp"
+            android:stackFromBottom="true"
             android:transcriptMode="alwaysScroll"/>
 
         <LinearLayout
-            android:id="@+id/sent_layoutt"
+            android:id="@+id/sent_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -74,6 +112,5 @@
                 android:src="@drawable/ic_send_message_24dp"
                 android:text="Send"/>
         </LinearLayout>
-
     </RelativeLayout>
 </LinearLayout>
