--- a/app/src/main/res/layout/fragment_wall.xml
+++ b/app/src/main/res/layout/fragment_wall.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.RecyclerView
+            <by.grodno.toni7777.socialnetwork.base.EmptyRecyclerView
                 android:id="@+id/posts_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -42,6 +42,13 @@
             app:layout_anchor="@id/posts_recycler"
             app:layout_anchorGravity="bottom|right|end"/>
 
-
     </FrameLayout>
+
+    <include
+        android:id="@+id/empty_recycler"
+        layout="@layout/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
 </android.support.design.widget.CoordinatorLayout>
