--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -97,8 +97,10 @@
                 android:id="@+id/input_message"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="4dp"
                 android:layout_weight="1"
                 android:hint="Input text"
                 android:padding="4dp"
@@ -110,8 +112,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="4dp"
+                android:padding="4dp"
                 android:src="@drawable/ic_send_message_24dp"
                 android:text="Send"/>
+
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
