--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -1,47 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/dialog_layout"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="?android:attr/selectableItemBackground"
-              android:orientation="horizontal"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin">
+<RelativeLayout android:id="@+id/dialog_layout"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?android:attr/selectableItemBackground"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin">
 
     <ImageView
         android:id="@+id/interlocutor_image"
         android:layout_width="@dimen/group_image_width"
         android:layout_height="@dimen/group_image_height"
+        android:layout_gravity="center_vertical"
+    />
+
+    <TextView
+        android:id="@+id/interlocutor_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_horizontal"
+        android:layout_marginRight="@dimen/margin_horizontal"
+        android:layout_toRightOf="@+id/interlocutor_image"
     />
 
     <LinearLayout
-        android:layout_width="@dimen/weight_dimen"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_below="@+id/interlocutor_name"
+        android:layout_marginLeft="@dimen/margin_horizontal"
+        android:layout_marginRight="@dimen/margin_horizontal"
+        android:layout_marginTop="@dimen/margin_horizontal"
+        android:layout_toRightOf="@+id/interlocutor_image"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/interlocutor_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/friend_margin_horizontal"
-            android:layout_marginRight="@dimen/friend_margin_horizontal"
+        <ImageView
+            android:id="@+id/sender_image"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
         />
 
         <TextView
             android:id="@+id/last_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginLeft="@dimen/friend_margin_horizontal"
-            android:layout_marginRight="@dimen/friend_margin_horizontal"
-            android:layout_marginTop="4dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/margin_horizontal"
+            android:singleLine="true"
         />
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
