--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -22,7 +22,9 @@
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
-        <include layout="@layout/error"/>
+        <include
+            layout="@layout/error"
+            android:visibility="gone"/>
 
         <include
             android:id="@+id/progress_pagination_view"
