Fix send new post to wall Add restore password

--- a/app/src/main/res/layout/fragment_tab_info.xml
+++ b/app/src/main/res/layout/fragment_tab_info.xml
@@ -17,6 +17,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:hint="@string/registration_name"
             />
 
@@ -30,6 +31,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:hint="@string/registration_surname"/>
 
         </android.support.design.widget.TextInputLayout>
