--- a/app/src/main/res/layout/fragment_tab_login.xml
+++ b/app/src/main/res/layout/fragment_tab_login.xml
@@ -18,6 +18,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:hint="@string/registration_login"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -31,6 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/registration_password"
+                android:singleLine="true"
                 android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -44,6 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/registration_confirm_password"
+                android:singleLine="true"
                 android:inputType="textPassword"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -56,6 +59,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
                 android:hint="@string/registration_email"/>
 
         </android.support.design.widget.TextInputLayout>
