--- a/app/src/main/res/layout/fragment_restore.xml
+++ b/app/src/main/res/layout/fragment_restore.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
@@ -23,12 +24,15 @@
 
         </android.support.design.widget.TextInputLayout>
 
-        <Button
+        <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/restore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/restore_password"/>
+            android:text="@string/restore_password"
+            android:textColor="@android:color/white"
+            custom:pb_colorNormal="@color/normal"
+            custom:pb_colorPressed="@color/press"/>
 
     </LinearLayout>
 
