--- a/app/src/main/res/layout/item_post_image.xml
+++ b/app/src/main/res/layout/item_post_image.xml
@@ -57,8 +57,8 @@
 
         <ImageView
             android:id="@+id/post_image"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/post_image_height"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/owner_image"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/post_marging_start"/>
