--- a/app/src/main/res/layout/tab_navigation.xml
+++ b/app/src/main/res/layout/tab_navigation.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ViewSwitcher
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation_switcher"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
->
+    android:layout_height="match_parent">
 
-    <Button
+    <com.dd.processbutton.iml.ActionProcessButton
         android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:text="@string/register_navigation_next"
-        android:textColor="@color/navTextColor"/>
+        android:textColor="@android:color/white"
+        custom:pb_colorNormal="@color/normal"
+        custom:pb_colorPressed="@color/press"/>
 
-    <Button
+    <com.dd.processbutton.iml.ActionProcessButton
         android:id="@+id/complete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        custom:pb_colorNormal="@color/normal"
+        custom:pb_colorPressed="@color/press"
         android:layout_gravity="center_horizontal"
         android:text="@string/register_navigation_create_account"
         android:textColor="@color/navTextColor"/>
