--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,13 @@
 <resources>
     <color name="primary">#00BCD4</color>
     <color name="primary_dark">#0097A7</color>
-    <color name="accent">#fde400</color>
-    <color name="accent_translucent">#80FFEB3B</color>
-    <color name="accent_bright">#FFF493</color>
+    <color name="accent">#FFC107</color>
+    <color name="accent_translucent">#80ffc43b</color>
+    <color name="accent_bright">#ffdf93</color>
 
     <color name="postIconColor">#716969</color>
     <color name="navTextColor">#FFFFFF</color>
-    <color name="progressPaginationColor">#AA000000</color>
+    <color name="progressPaginationColor">#FFFFFF</color>
 
     <color name="newPostBottomColor">#dfdee6</color>
     <color name="toolbar_title">#ffffff</color>
