--- a/app/src/main/res/layout/fragment_wall.xml
+++ b/app/src/main/res/layout/fragment_wall.xml
@@ -32,13 +32,15 @@
             android:layout_gravity="bottom"
             android:visibility="gone"/>
 
-        <android.support.design.widget.FloatingActionButton
+        <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/new_post_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_write_post"
+            app:fab_colorNormal="@color/accent"
+            app:fab_colorPressed="#e4cd00"
             app:layout_anchor="@id/posts_recycler"
             app:layout_anchorGravity="bottom|right|end"/>
 
