--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -118,8 +118,24 @@
                 android:layout_marginTop="4dp"
                 android:padding="4dp"
                 android:src="@drawable/ic_send_message_24dp"
-                />
+            />
 
         </LinearLayout>
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/load"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+        />
+
+    </RelativeLayout>
+
+
 </LinearLayout>
