--- a/app/src/main/res/layout/item_search_friend.xml
+++ b/app/src/main/res/layout/item_search_friend.xml
@@ -21,7 +21,7 @@
         android:layout_width="@dimen/weight_dimen"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/friend_margin_horizontal"
+        android:layout_marginLeft="14dp"
         android:layout_marginRight="@dimen/friend_margin_horizontal"
         android:layout_weight="1"/>
 
