Update profile layout

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,17 +42,6 @@
                     android:text="First Name"
                     android:textSize="20sp"/>
 
-                <ImageView
-                    android:id="@+id/edit_profile_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/profile_name"
-                    android:layout_alignParentEnd="true"
-                    android:paddingBottom="16dp"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:src="@drawable/ic_edit_profile_24dp"/>
-
                 <TextView
                     android:id="@+id/profile_surname"
                     android:layout_width="wrap_content"
@@ -64,18 +53,6 @@
                     android:text="SurName"
                     android:textSize="20sp"/>
 
-                <ImageView
-                    android:id="@+id/edit_profile_surname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/profile_surname"
-                    android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/profile_name"
-                    android:paddingBottom="16dp"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:src="@drawable/ic_edit_profile_24dp"/>
-
                 <TextView
                     android:id="@+id/profile_sex"
                     android:layout_width="wrap_content"
@@ -85,17 +62,6 @@
                     android:paddingStart="16dp"
                     android:text="Sex"
                     android:textSize="20sp"/>
-
-                <ImageView
-                    android:id="@+id/edit_profile_sex"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/profile_sex"
-                    android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/profile_surname"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:src="@drawable/ic_edit_profile_24dp"/>
 
             </RelativeLayout>
 
@@ -120,20 +86,9 @@
                     android:paddingBottom="16dp"
                     android:paddingEnd="16dp"
                     android:paddingStart="16dp"
-                    android:text="City"
+                    android:text="@string/profile_city"
                     android:textSize="20sp"
                 />
-
-                <ImageView
-                    android:id="@+id/edit_profile_city"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/profile_city"
-                    android:layout_alignParentEnd="true"
-                    android:paddingBottom="16dp"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:src="@drawable/ic_edit_profile_24dp"/>
 
                 <TextView
                     android:id="@+id/profile_about"
@@ -142,20 +97,9 @@
                     android:layout_below="@+id/profile_city"
                     android:paddingEnd="16dp"
                     android:paddingStart="16dp"
-                    android:text="About"
+                    android:text="@string/profile_about"
                     android:textSize="20sp"
                 />
-
-                <ImageView
-                    android:id="@+id/edit_profile_about"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/profile_about"
-                    android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/profile_city"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:src="@drawable/ic_edit_profile_24dp"/>
 
             </RelativeLayout>
 
@@ -181,17 +125,6 @@
                     android:text="Mobile number"
                     android:textSize="20sp"/>
 
-                <ImageView
-                    android:id="@+id/edit_profile_mobile_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/profile_mobile_number"
-                    android:layout_alignParentEnd="true"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:paddingTop="16dp"
-                    android:src="@drawable/ic_edit_profile_24dp"/>
-
                 <TextView
                     android:id="@+id/profile_email"
                     android:layout_width="wrap_content"
@@ -203,17 +136,6 @@
                     android:text="email"
                     android:textSize="20sp"/>
 
-                <ImageView
-                    android:id="@+id/edit_profile_email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/profile_email"
-                    android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/profile_mobile_number"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:src="@drawable/ic_edit_profile_24dp"/>
-
                 <TextView
                     android:id="@+id/profile_skype"
                     android:layout_width="wrap_content"
@@ -222,19 +144,9 @@
                     android:paddingBottom="16dp"
                     android:paddingEnd="16dp"
                     android:paddingStart="16dp"
-                    android:text="Skype"
+                    android:text="@string/profile_skype"
                     android:textSize="20sp"/>
 
-                <ImageView
-                    android:id="@+id/edit_profile_skype"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/profile_skype"
-                    android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/profile_email"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:src="@drawable/ic_edit_profile_24dp"/>
 
             </RelativeLayout>
 
